created jaxrs clients